--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     {
       "name": "Rikard Qvarforth",
       "email": "rikard.qvarforth@viati.se",
-      "url": "https://github.com/gewfy"
+      "url": "https://github.com/rikardq"
     }
   ],
   "license": "MIT",
