--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "url": "https://github.com/Vinnovera/redux-contexts.git"
   },
   "scripts": {
+    "test": "jest",
     "build": "babel src --out-dir lib",
     "clean": "rimraf lib",
-    "prepublish": "npm run clean && npm run build"
+    "prepublish": "npm run test && npm run clean && npm run build"
   },
   "keywords": [
     "react",
@@ -43,19 +44,25 @@
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-jest": "^21.2.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-syntax-class-properties": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
+    "jest": "^21.2.1",
+    "react": "^16.0.0",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
+    "regenerator-runtime": "^0.11.0",
     "rimraf": "^2.6.2",
     "webpack": "^3.7.1"
   },
   "peerDependencies": {
     "react": "^16.0.0",
-    "redux": "^3.7.2",
-    "react-redux": "^5.0.6"
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "dependencies": {
     "lodash": "^4.17.4",
