--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react": "^16.0.0",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "regenerator-runtime": "^0.11.0",
     "rimraf": "^2.6.2",
     "webpack": "^3.7.1"
