--- a/.babelrc
+++ b/.babelrc
@@ -1,13 +1,3 @@
 {
-  "presets": [
-    {
-      "plugins": [
-        "syntax-class-properties",
-        "transform-class-properties"
-      ]
-    },
-    "react",
-    "es2015",
-    "stage-0"
-  ]
+  "presets": ["react", "env", "stage-0"]
 }
